connect mongodb atlas import mongoose add user.model

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/huynhdat2703/khosach#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "mongoose": "^5.9.16",
     "pug": "^2.0.4"
   },
   "devDependencies": {
